[package]
name = "hcompress"
version = "0.3.0"
edition = "2021"
repository = "https://github.com/petesmc/hcompress.git"
description = "HCompress Library"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.10"
arbitrary = { version = "1.4", optional = true, features = ["derive"] }
bytemuck = "1.22"

[dev-dependencies]
quickcheck = "1"

[profile.dev]
#overflow-checks = false

[profile.release]
#overflow-checks = false

[profile.test]
#overflow-checks = false